--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2540,8 +2540,8 @@ boss__rsyslog__centralized__deployment_spec_template_spec_sidcar_container: |-
     # v: Verbose
     # d: Debug, Logrotate will be emulated but never executed!
     # f: Force
-    - name: LOGROTATE_PARAMETERS
-      value: "v"
+    # - name: LOGROTATE_PARAMETERS
+    #   value: "v"
     volumeMounts:
     - name: log
       mountPath: {{boss__rsyslog__centralized__path_to_logs_inside_container}}
