Feature: fluentd-elasticsearch grok (#11)
* Feature: fluentd-elasticsearch grok

* Feature: fluentd-elasticsearch grok

* WIP: fixing up some things for rsyslog-centralized, including a pvc

* Feature: pvc grok

* Feature: pvc grok

* Feature: pvc grok

* Feature: pvc grok

* Feature: pvc grok

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* WIP: file ownership, default rsyslog format, and more

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: vagrant pvc rsyslog-centralized

* Feature: logrotate

* Feature: logrotate

* WIP: manual fixing rsyslog

* manual configs

* feature: 200

* Feature: logrotate

* Feature: logr

--- a/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/tasks/main.yaml
@@ -11,11 +11,11 @@
     dest: "{{ boss__rsyslog__centralized__manifest_path }}/{{ item }}"
   with_items:
     - "0rsyslog-centralized.namespace.yaml"
+    - "0rsyslog-centralized.pvc.yaml"
     - "1rsyslog-centralized-service-account.yaml"
     - "2rsyslog-centralized-role.yaml"
     - "3rsyslog-centralized-role-binding.yaml"
     - "4rsyslog-centralized-configmap{{boss__rsyslog__centralized__configmap_suffix}}.yaml"
-    # - "4rsyslog-centralized-configmap.yaml"
     - "5rsyslog-centralized.deploy.yaml"
     - "6rsyslog-centralized.svc.yaml"
     - "7rsyslog-centralized.ingress.yaml"
