--- a/containers/logrotate/Makefile
+++ b/containers/logrotate/Makefile
@@ -1,41 +1,10 @@
-# # Copyright 2017 The Kubernetes Authors.
-# #
-# # Licensed under the Apache License, Version 2.0 (the "License");
-# # you may not use this file except in compliance with the License.
-# # You may obtain a copy of the License at
-# #
-# #     http://www.apache.org/licenses/LICENSE-2.0
-# #
-# # Unless required by applicable law or agreed to in writing, software
-# # distributed under the License is distributed on an "AS IS" BASIS,
-# # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# # See the License for the specific language governing permissions and
-# # limitations under the License.
-
-# .PHONY:	build push
-
-# PREFIX = staging-k8s.gcr.io
-# IMAGE = fluentd-elasticsearch
-# TAG = v2.0.4
-
-# build:
-# 	docker build --pull -t $(PREFIX)/$(IMAGE):$(TAG) .
-
-# push:
-# 	docker push $(PREFIX)/$(IMAGE):$(TAG)
-
-# possibilities to grep from
-# image: image: k8s.gcr.io/fluentd-elasticsearch:v2.2.0
-# image: gcr.io/google-containers/fluentd-elasticsearch:v2.0.1
-
-
 username := bossjones
-container_name := fluentd-elasticsearch
+container_name := logrotate
 
 GIT_BRANCH  = $(shell git rev-parse --abbrev-ref HEAD)
 GIT_SHA     = $(shell git rev-parse HEAD)
 BUILD_DATE  = $(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
-VERSION  ?= $(shell grep "k8s.gcr.io/fluentd-elasticsearch" Dockerfile | head -1 | cut -d":" -f2)
+VERSION     ?= $(shell grep "alpine:3.7" Dockerfile | head -1 | cut -d":" -f2)
 
 TAG ?= $(VERSION)
 ifeq ($(TAG),@branch)
@@ -47,16 +16,9 @@ bash:
 	docker run \
 	-it \
 	--rm \
-	--name fluentd.bash \
+	--name logrotate.bash \
 	-h $(shell hostname) \
 	-v /etc/localtime:/etc/localtime:ro \
-	-p "5140:5140" \
-	-p "5140:5140/udp" \
-	-p "5160:5160" \
-	-p "5160:5160/udp" \
-	-p "5170:5170" \
-	-p "24231:24231" \
-	-p "24220:24220" \
 	--entrypoint "/bin/bash" \
 	$(username)/$(container_name):latest \
 	-l
@@ -65,16 +27,8 @@ run:
 	docker run \
 	-it \
 	--rm \
-	--name fluentd.service \
-	-w /home/appliance \
+	--name logrotate.service \
 	-v /etc/localtime:/etc/localtime:ro \
-	-p "5140:5140" \
-	-p "5140:5140/udp" \
-	-p "5160:5160" \
-	-p "5160:5160/udp" \
-	-p "5170:5170" \
-	-p "24231:24231" \
-	-p "24220:24220" \
 	-h $(shell hostname) \
 	$(username)/$(container_name):latest
 
