--- a/extra_playbooks/roles/kubernetes-apps/elasticsearch-exporter/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/elasticsearch-exporter/tasks/main.yaml
@@ -10,6 +10,9 @@
     src: "{{ item }}.j2"
     dest: "{{ boss__elasticsearch__exporter__manifest_path }}/{{ item }}"
   with_items:
+    - "1elasticsearch-exporter-service-account.yaml"
+    - "2elasticsearch-exporter-role.yaml"
+    - "3elasticsearch-exporter-role-binding.yaml"
     - "5elasticsearch-exporter.deploy.yaml"
     - "6elasticsearch-exporter.svc.yaml"
     - "7elasticsearch-exporter.ingress.yaml"
